@@ -19,28 +19,14 @@ getRandomPosition ()
 	if (pointEmitter == 1)
 		return vec3 (0.0f);
 
-	ivec3 index = random_triangle (surfaceAreaMap);
-	
-	vec3 normal1 = texelFetch (normalMap, index .x) .xyz;
-	vec3 normal2 = texelFetch (normalMap, index .y) .xyz;
-	vec3 normal3 = texelFetch (normalMap, index .z) .xyz;
+	vec3 position;
 
-	vec3 vertex1 = texelFetch (surfaceMap, index .x) .xyz;
-	vec3 vertex2 = texelFetch (surfaceMap, index .y) .xyz;
-	vec3 vertex3 = texelFetch (surfaceMap, index .z) .xyz;
-
-	// Random barycentric coordinates.
-
-	vec3 coord = random_barycentric ();
-
-	// Calculate direction and position
-
-	direction = normalize (coord .x * normal1 + coord .y * normal2 + coord .z * normal3);
+	random_point_on_surface (surfaceAreaMap, surfaceMap, normalMap, position, direction);
 
 	if (solid == 0 && random1 () > 0.0f)
 		direction = -direction;
 
-	return coord .x * vertex1 + coord .y * vertex2 + coord .z * vertex3;
+	return position;
 }
 
 vec3
