@@ -57,6 +57,29 @@ random_triangle (in samplerBuffer surfaceAreaMap)
 	return ivec3 (index0, index0 + 1, index0 + 2);
 }
 
+void
+random_point_on_surface (in samplerBuffer surfaceAreaMap, in samplerBuffer surfaceMap, in samplerBuffer normalMap, out vec3 position, out vec3 normal)
+{
+	ivec3 index = random_triangle (surfaceAreaMap);
+
+	vec3 vertex1 = texelFetch (surfaceMap, index .x) .xyz;
+	vec3 vertex2 = texelFetch (surfaceMap, index .y) .xyz;
+	vec3 vertex3 = texelFetch (surfaceMap, index .z) .xyz;
+
+	vec3 normal1 = texelFetch (normalMap, index .x) .xyz;
+	vec3 normal2 = texelFetch (normalMap, index .y) .xyz;
+	vec3 normal3 = texelFetch (normalMap, index .z) .xyz;
+
+	// Random barycentric coordinates.
+
+	vec3 coord = random_barycentric ();
+
+	// Calculate direction and position
+
+	normal   = normalize (coord .x * normal1 + coord .y * normal2 + coord .z * normal3);
+	position = coord .x * vertex1 + coord .y * vertex2 + coord .z * vertex3;
+}
+
 /* main */
 
 vec3
